#
#   This file is part of Sylverant PSO Server.
#
#   Copyright (C) 2009, 2010, 2011, 2014 Lawrence Sebald
#
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU Affero General Public License version 3
#   as published by the Free Software Foundation.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU Affero General Public License for more details.
#
#   You should have received a copy of the GNU Affero General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

sylverant_includedir = $(includedir)/sylverant
sylverant_include_HEADERS = config.h database.h debug.h prs.h mtwist.h \
                            encryption.h checksum.h quest.h \
                            items.h characters.h memory.h
datarootdir = @datarootdir@
