#  
#   This file is part of Sylverant PSO Server.
#  
#   Copyright (C) 2009 Lawrence Sebald
#  
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License version 3 as
#   published by the Free Software Foundation.
#  
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#  
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

noinst_LTLIBRARIES = libcharacters.la
AM_CPPFLAGS = -I$(top_srcdir)/include

libcharacters_la_SOURCES = char_fetch.c minichar_fetch.c char_create.c \
                           char_sanitize.c char_update.c char_update_full.c \
                           char_swap.c

datarootdir = @datarootdir@
